# Code2Resume

./: .env.example  .gitignore  Modelfile  Modelfile_resume  README.md  check_finetune_ready.py  combined_train.jsonl  fine_tune.py  index.html  init_db.py  merge_lora.py  pyproject.toml  run.bat  run.sh  run_finetune.sh  run_finetune_safe.sh  test_formatting.py
Git_details/mithrajith/: data.jsonl  fine_tune_data.jsonl
Git_details/zypher/: data.jsonl
LateX_template/: main.tex  mithrajith_resume.tex
Scrpts/: start.bat  start.sh
Test_files/: check_gpu_deps.py  test_app.py  test_db.py  validate_system.py
backend/: app.py  fine_tune_service.py
backend/app/api/: jobs.py  resumes.py  v1_compat.py
backend/config/: settings.py
backend/models/: llm_handler.py  user.py
backend/services/: agent_service.py  github_service.py  rag_service.py
frontend-react/: index.html  package-lock.json  package.json
frontend-react/src/: App.jsx  index.css
frontend-react/src/api/: github.js  v2.js
frontend-react/src/pages/: ATSAnalyzer.jsx  Dashboard.jsx  GitHubAnalysis.jsx  Login.jsx  Register.jsx  ResumeBuilder.jsx  ResumeTemplates.jsx  (+2 more)
lora_model/: adapter_config.json
outputs/: README.md
outputs/checkpoint-60/: README.md  trainer_state.json
resumes/: resume_mithrajith_20251210_122417.tex  resume_mithrajith_20251210_161458.tex  resume_zypher_20251215_114903.tex
scripts/: run.sh  start-react.bat  start-react.sh
static/css/: styles.css
static/js/: main.js
template/: dashboard.html  login.html  register.html  resumes.html  settings.html  test_auth.html
(+12 files in other folders)
